# wall-e-world

./: .gitignore  README.md  pyproject.toml  run_octo.py  run_openvla.py  utils.py
docs/: index.html  paper.tex
docs/static/css/: index.css
modal/: modal_config.py  modal_data.py  modal_train.py  pyproject.toml
scripts/: create_ood_images.py
src/wall_e_world/: __init__.py  dataset.py  download_data.py  train.py
